# hoppscotch-app

./: .gitignore  .gitmodules  LICENSE.txt  README.md  package.json  postwoman_extension_hook_patch.txt
.github/workflows/: auto_build.yml  build.yml  build_and_deploy.yml
src-tauri/: Cargo.toml  Cross.toml  tauri.conf-linux.json  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
