[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = ["api-all", "devtools", "http-multipart", "windows7-compat"] }
# see https://github.com/tauri-apps/tauri/discussions/3638, https://github.com/tauri-apps/tauri/discussions/3059
# tauri = { git = "https://github.com/tauri-apps/tauri.git", branch = "dev", features = ["devtools", "dialog-all", "macos-private-api", "path-all", "process-exit", "process-relaunch", "shell-open", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
